--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,15 @@
 // 색상 변수
 $primary-color: #4caf50; // 메인 색상
+$primary-color-hover: #45a049; // 메인 색상 호버
 $secondary-color: #ff5722; // 보조 색상
+$secondary-color-hover: #e64a19; // 보조 색상 호버
 $text-color: #333; // 텍스트 색상
+$text-color-white: #fff; // 텍스트 색상
+$text-color-error: #ff0000; // 텍스트 색상
 $background-color: #f7f7f7; // 배경 색상
+$background-color-hover: #f0f0f0; // 배경 색상
+$border-color: #ddd; // 테두리 색상
+$border-color-hover: #ccc; // 테두리 색상
 
 // 폰트 변수
 $font-family: "Arial, sans-serif";
