--- a/src/styles/landing/SearchSection.module.scss
+++ b/src/styles/landing/SearchSection.module.scss
@@ -8,15 +8,21 @@
 
     .searchBox {
         display: grid;
-        grid-template-columns: minmax(280px, 3fr) minmax(140px, 1.5fr) minmax(140px, 1.5fr) minmax(140px, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
         align-items: center;
         width: 100%;
+
+        .searchButton {
+            grid-column: 1 / -1;
+        }
+
         & > * {
             min-width: 0;
         }
 
         input {
+            width: 100%;
             height: 48px;
             font-size: 0.95rem;
             padding: 0 1rem;
