스타일 개선: PlanList 및 페이지 모듈에 flexbox 레이아웃 추가
- PlanList 모듈에 높이 100% 설정으로 스크롤 가능 영역 확장
- 페이지 모듈의 planContent에 flexbox 레이아웃 적용하여 세로 방향 정렬 및 높이 100% 설정

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,6 +11,9 @@
   background: linear-gradient(135deg, #f6f9fc 0%, #e9f1f9 100%);
 
   .planContent {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width: 100%;
     text-align: center;
 
