--- a/src/components/travelPlan/PlanList.module.scss
+++ b/src/components/travelPlan/PlanList.module.scss
@@ -6,6 +6,7 @@
   background: linear-gradient(135deg, #f0f9ff 0%, #fff1f2 100%);
 
   &__container {
+    height: 100%;
     overflow-y: auto;
     padding-right: 0.2rem;
     padding-top: 0.3rem;
