여행 계획 상세 페이지의 활동 목록 및 스타일 개선
- 여행 계획 상세 페이지에서 선택된 일정에 따라 활동 목록을 동적으로 업데이트하도록 수정
- 선택된 일정에 대한 스타일을 추가하여 사용자 인터페이스 개선
- SCSS 파일에 새로운 클래스 추가로 활성화된 일정 항목의 배경색 변경

--- a/src/app/travel-plan/[id]/page.module.scss
+++ b/src/app/travel-plan/[id]/page.module.scss
@@ -93,6 +93,10 @@
     }
   }
 
+  &__locationItemActive {
+    background-color: #b2f5db;
+  }
+
   &__locationHeader {
     display: flex;
     justify-content: space-between;
