페이지 모듈 스타일 수정
- 모바일 화면에서 planContainer의 패딩을 조정하여 레이아웃 개선
- planContent 내의 h1 및 p 요소를 숨겨 사용자 경험 향상

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -194,12 +194,20 @@
 @media (max-width: 768px) {
     .planContainer {
         flex-direction: column;
-        padding: 2rem 2rem;
+        padding: 0 2rem 2rem 2rem;
         text-align: center;
         word-break: keep-all;
 
         .planContent {
             margin-bottom: 2rem;
+
+            h1 {
+                display: none;
+            }
+
+            p {
+                display: none;
+            }
         }
     }
 
