스타일 및 레이아웃 수정
- 로그인 페이지의 헤더 텍스트를 "Have a good trip!"으로 변경
- 모바일 화면에서 로그인 폼 및 애니메이션 컨테이너의 스타일을 개선하여 반응형 디자인 강화
- 변수 파일에서 테두리 색상 변경 및 관련 스타일 조정

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,8 +8,8 @@ $text-color-white: #fff; // 텍스트 색상
 $text-color-error: #ff0000; // 텍스트 색상
 $background-color: #f7f7f7; // 배경 색상
 $background-color-hover: #f0f0f0; // 배경 색상
-$border-color: #ddd; // 테두리 색상
-$border-color-hover: #ccc; // 테두리 색상
+$border-color: #acaaaa; // 테두리 색상
+$border-color-hover: #808080; // 테두리 색상
 
 // 폰트 변수
 $font-family: "Arial, sans-serif";
