--- a/src/app/(auth)/login/page.module.scss
+++ b/src/app/(auth)/login/page.module.scss
@@ -30,3 +30,14 @@
         transform: translateY(0);
     }
 }
+
+@media (max-width: 768px) {
+    .container {
+        justify-content: center;
+        padding: 1rem;
+
+        .header {
+            font-size: 1.5rem;
+        }
+    }
+}
