--- a/src/components/animations/Airplane.module.scss
+++ b/src/components/animations/Airplane.module.scss
@@ -1,7 +1,7 @@
 @use "@/styles/variables" as *;
 
 .container {
-    width: 800px;
+    width: 100%;
     height: 400px;
     margin: 50px auto;
     background: linear-gradient(180deg, #87ceeb 0%, #b5e2ff 100%);
@@ -48,4 +48,10 @@
     filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
     transform-origin: 50% 50%;
     z-index: 10; // 다른 요소들 위에 표시되도록
+}
+
+@media (max-width: 768px) {
+    .container {
+        display: none;
+    }
 }
