--- a/src/components/auth/SignupForm.module.scss
+++ b/src/components/auth/SignupForm.module.scss
@@ -67,3 +67,26 @@
         transform: translateX(0);
     }
 }
+
+@media (max-width: 768px) {
+    .form {
+        font-size: 1.5rem;
+
+        .inputGroup {
+            input {
+                font-size: 1.8rem;
+                border: 2px solid $border-color;
+                padding: 1rem;
+            }
+
+            .error {
+                font-size: 1.5rem;
+            }
+        }
+
+        .button {
+            font-size: 1.8rem;
+            padding: 1rem;
+        }
+    }
+}
