--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -39,7 +39,6 @@
   .mapWrapper {
     width: 100%;
     height: 400px;
-    margin-top: 2rem;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
@@ -190,7 +189,7 @@
 
     .heroContent {
       h1 {
-        font-size: 1.75rem;
+        display: none;
       }
 
       p {
