숙소 선택 버튼의 배경색 변경 방식 개선
- Sass의 color 모듈을 사용하여 배경색을 조정하는 방식으로 수정
- 기존의 darken 함수 대신 color.scale 함수를 사용하여 색상 조정

--- a/src/components/landing/AccommodationSelector.module.scss
+++ b/src/components/landing/AccommodationSelector.module.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @import "@/styles/variables.scss";
 
 .accommodationSelector {
@@ -262,7 +263,7 @@
       transition: all 0.2s ease;
 
       &:hover:not(:disabled) {
-        background-color: darken($primary-color, 5%);
+        background-color: color.scale($primary-color, $lightness: -5%);
       }
 
       &:disabled {
