--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
 // 색상 변수
-$primary-color: #4caf50; // 메인 색상
-$primary-color-hover: #45a049; // 메인 색상 호버
-$secondary-color: #ff5722; // 보조 색상
-$secondary-color-hover: #e64a19; // 보조 색상 호버
+$primary-color: #9ac2f0; // 메인 색상
+$primary-color-hover: #79a7e4; // 메인 색상 호버
+$secondary-color: #ee805e; // 보조 색상
+$secondary-color-hover: #dd562d; // 보조 색상 호버
+$tertiary-color: #558aee; // 테두리 색상
+$tertiary-color-hover: #4470c0; // 테두리 색상 호버
 $text-color: #333; // 텍스트 색상
 $text-color-white: #fff; // 텍스트 색상
 $text-color-error: #ff0000; // 텍스트 색상
