--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,40 +1,86 @@
+@import "./variables.scss";
+
 // Flexbox 정렬
 @mixin flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 // 숨김 처리
 @mixin visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 // 반응형 스타일
 @mixin respond-to($breakpoint) {
-    @if $breakpoint == sm {
-        @media (max-width: 576px) {
-            @content;
-        }
-    } @else if $breakpoint == md {
-        @media (max-width: 768px) {
-            @content;
-        }
-    } @else if $breakpoint == lg {
-        @media (max-width: 992px) {
-            @content;
-        }
-    } @else if $breakpoint == xl {
-        @media (max-width: 1200px) {
-            @content;
-        }
+  @if $breakpoint == sm {
+    @media (max-width: 576px) {
+      @content;
     }
+  } @else if $breakpoint == md {
+    @media (max-width: 768px) {
+      @content;
+    }
+  } @else if $breakpoint == lg {
+    @media (max-width: 992px) {
+      @content;
+    }
+  } @else if $breakpoint == xl {
+    @media (max-width: 1200px) {
+      @content;
+    }
+  }
+}
+
+// 버튼 스타일
+@mixin button-base {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+@mixin button-primary {
+  @include button-base;
+  background-color: $primary-color;
+
+  &:hover {
+    background-color: $primary-color-hover;
+  }
+}
+
+@mixin button-secondary {
+  @include button-base;
+  background-color: $secondary-color;
+
+  &:hover {
+    background-color: $secondary-color-hover;
+  }
+}
+
+@mixin button-tertiary {
+  @include button-base;
+  background-color: $tertiary-color;
+
+  &:hover {
+    background-color: $tertiary-color-hover;
+  }
 }
