환경 변수 추가 및 소셜 로그인 기능 구현
- .env.dev 및 .env.prod 파일에 NEXTAUTH_URL 추가
- package.json에 next-auth 패키지 추가
- SessionProvider 컴포넌트 생성 및 layout.tsx에 적용
- 소셜 로그인 처리 로직을 위한 SocialCallbackPage 및 관련 API 엔드포인트 추가
- Google 로그인 버튼 및 스타일 추가하여 사용자 인터페이스 개선
- 상태 관리 스토어에 소셜 로그인 기능 추가

--- a/src/components/auth/LoginForm.module.scss
+++ b/src/components/auth/LoginForm.module.scss
@@ -55,6 +55,20 @@
     &:hover {
       background-color: $primary-color-hover;
     }
+
+    &.googleButton {
+      background-color: #4285f4;
+      margin-bottom: 0.5rem;
+
+      &:hover {
+        background-color: #357ae8;
+      }
+
+      &:disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+      }
+    }
   }
 }
 
